remove background color

--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-kS-Xfa" customClass="MoodView" customModule="HowAmIDoing" customModuleProvider="target">
                                                 <rect key="frame" x="160" y="160" width="80" height="80"/>
-                                                <color key="backgroundColor" red="0.48026315790000002" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="80" id="DH4-KQ-xrw"/>
                                                     <constraint firstAttribute="height" constant="80" id="S4w-81-aAD"/>
