--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                                                 <variation key="heightClass=regular-widthClass=compact" constant="48"/>
                                             </constraint>
                                         </constraints>
-                                        <state key="normal" image="options_restartTutorial">
+                                        <state key="normal" image="settings">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1915,7 +1915,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHr-74-r9g" userLabel="Category Container View">
+                                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sHr-74-r9g" userLabel="Category Container View">
                                                 <rect key="frame" x="6" y="105" width="388" height="228"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAE-Sy-OpA" customClass="LoveCategoryView" customModule="HowAmIDoing" customModuleProvider="target">
@@ -2361,7 +2361,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                     </mask>
                                                 </variation>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RvV-eo-xfy">
+                                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RvV-eo-xfy">
                                                 <rect key="frame" x="0.0" y="353" width="400" height="359"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pvZ-k1-yWH">
@@ -2371,7 +2371,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                             <constraint firstAttribute="height" constant="1" id="Os8-QC-wlX"/>
                                                         </constraints>
                                                     </view>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add a note..." translatesAutoresizingMaskIntoConstraints="NO" id="jDb-wj-8uM">
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="Add a note..." translatesAutoresizingMaskIntoConstraints="NO" id="jDb-wj-8uM">
                                                         <rect key="frame" x="14" y="20" width="372" height="339"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2388,8 +2388,12 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                     <constraint firstItem="jDb-wj-8uM" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" constant="20" id="KaZ-ek-kqT">
                                                         <variation key="heightClass=compact" constant="15"/>
                                                     </constraint>
-                                                    <constraint firstAttribute="trailing" secondItem="jDb-wj-8uM" secondAttribute="trailing" constant="14" id="Mph-Fd-Dd9"/>
-                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="leading" secondItem="RvV-eo-xfy" secondAttribute="leading" constant="14" id="UYx-Uc-g7g"/>
+                                                    <constraint firstAttribute="trailing" secondItem="jDb-wj-8uM" secondAttribute="trailing" constant="14" id="Mph-Fd-Dd9">
+                                                        <variation key="heightClass=compact" constant="16"/>
+                                                    </constraint>
+                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="leading" secondItem="RvV-eo-xfy" secondAttribute="leading" constant="14" id="UYx-Uc-g7g">
+                                                        <variation key="heightClass=compact" constant="16"/>
+                                                    </constraint>
                                                     <constraint firstAttribute="trailing" secondItem="pvZ-k1-yWH" secondAttribute="trailing" id="VaI-oB-GSY"/>
                                                     <constraint firstItem="pvZ-k1-yWH" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" id="ZUL-Nt-yq9"/>
                                                     <constraint firstAttribute="bottom" secondItem="jDb-wj-8uM" secondAttribute="bottom" id="o7a-QB-7pb"/>
@@ -2401,7 +2405,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="50" id="93y-h4-7Cq"/>
-                                                    <constraint firstAttribute="height" constant="50" id="r0v-8V-PY1">
+                                                    <constraint firstAttribute="height" constant="56" id="r0v-8V-PY1">
                                                         <variation key="heightClass=compact" constant="62"/>
                                                     </constraint>
                                                 </constraints>
@@ -2413,7 +2417,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                     <action selector="dismissButtonTapped:" destination="fTm-Vk-pUw" eventType="touchUpInside" id="6nh-l7-iFF"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Why?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4c-Lx-DjL">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Why?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4c-Lx-DjL">
                                                 <rect key="frame" x="157" y="54" width="87" height="21"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -2459,8 +2463,8 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                 <rect key="frame" x="0.0" y="756" width="400" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="oce-tT-rFg">
-                                        <variation key="heightClass=compact" constant="52"/>
+                                    <constraint firstAttribute="height" constant="50" id="oce-tT-rFg">
+                                        <variation key="heightClass=compact" constant="50"/>
                                     </constraint>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -3399,8 +3403,8 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
         <image name="onboarding_04" width="320" height="256"/>
         <image name="onboarding_05" width="187" height="156"/>
         <image name="onboarding_arrow" width="16" height="20"/>
-        <image name="options_restartTutorial" width="28" height="10"/>
         <image name="rating_high" width="44" height="44"/>
         <image name="rating_low" width="44" height="44"/>
+        <image name="settings" width="28" height="28"/>
     </resources>
 </document>
